fix localizations ui inconsistencies

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -168,5 +168,6 @@
   },
   "total": "Total",
   "wish_saved": "Wish saved!",
-  "wish_deleted": "Wish deleted!"
+  "wish_deleted": "Wish deleted!",
+  "search": "Search"
 }
