--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -168,5 +168,6 @@
   },
   "total": "Total",
   "wish_saved": "¡Deseo guardado!",
-  "wish_deleted": "¡Deseo eliminado!"
+  "wish_deleted": "¡Deseo eliminado!",
+  "search": "Buscar"
 }
