--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -109,5 +109,6 @@
   "subtotal_currency": "Subtotal ({currency})",
   "total": "Total",
   "wish_saved": "Desejo salvo!",
-  "wish_deleted": "Desejo excluído!"
+  "wish_deleted": "Desejo excluído!",
+  "search": "Pesquisar"
 }
